# Multi-PDF-RAG

./: readme.md
backend/: docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
backend/client/: client.py
backend/rag/: main.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Chat.tsx  PdfProcessor.tsx
frontend/src/lib/: config.ts  types.ts
